--- a/package.json
+++ b/package.json
@@ -5,17 +5,41 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "animate.css": "^4.1.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "gatsby": "^5.2.0",
+    "gatsby-plugin-canonical-urls": "^5.3.0",
     "gatsby-plugin-image": "^3.2.0",
     "gatsby-plugin-manifest": "^5.2.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.2.0",
+    "gatsby-plugin-sitemap": "^6.3.1",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-plugin-typescript": "^5.2.0",
+    "gatsby-remark-copy-linked-files": "^6.2.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^7.2.0",
+    "gatsby-remark-prismjs": "^7.2.0",
+    "gatsby-remark-smartypants": "^6.2.0",
     "gatsby-source-filesystem": "^5.2.0",
+    "gatsby-transformer-remark": "^6.2.0",
     "gatsby-transformer-sharp": "^5.2.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.0"
+    "@typescript-eslint/parser": "^5.46.0",
+    "autoprefixer": "^10.4.13",
+    "gatsby-plugin-postcss": "^6.2.0",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3"
   },
   "keywords": [
     "gatsby"
@@ -23,9 +47,8 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
-    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
